# melonDS

./: .gitattributes  .gitignore  .gitmodules  ARM.cpp  ARM.h  ARMInterpreter.cpp  ARMInterpreter.h  ARMInterpreter_ALU.cpp  ARMInterpreter_ALU.h  ARMInterpreter_Branch.cpp  ARMInterpreter_Branch.h  ARMInterpreter_LoadStore.cpp  ARMInterpreter_LoadStore.h  ARM_InstrTable.h  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSetup_melonDS.cmake  CONTRIBUTING.md  CP15.cpp  CP15.h  DMA.cpp  DMA.h  FIFO.cpp  FIFO.h  GPU.cpp  GPU.h  GPU2D.cpp  GPU2D.h  GPU3D.cpp  GPU3D.h  GPU3D_Soft.cpp  LuaScript.md  Makefile  Makefile.common  NDS.cpp  NDS.h  NDSCart.cpp  NDSCart.h  NETPLAY_APPROACH.md  (+42 more)
apps/desktop/src-tauri/: Cargo.toml  (+1 more)
src/: ARCodeFile.cpp  ARCodeFile.h  ARCodeList.cpp  ARCodeList.h  ARDatabaseDAT.cpp  ARDatabaseDAT.h  AREngine.cpp  AREngine.h  ARM.cpp  ARM.h  ARMInterpreter.cpp  ARMInterpreter.h  ARMInterpreter_ALU.cpp  ARMInterpreter_ALU.h  ARMInterpreter_Branch.cpp  ARMInterpreter_Branch.h  ARMInterpreter_LoadStore.cpp  ARMInterpreter_LoadStore.h  ARMInterpreter_MultiplySuperLLE.h  ARMJIT.cpp  ARMJIT.h  ARMJIT_CodeMem.cpp  ARMJIT_CodeMem.h  ARMJIT_Compiler.h  ARMJIT_Global.cpp  ARMJIT_Global.h  ARMJIT_Internal.h  ARMJIT_Memory.cpp  ARMJIT_Memory.h  ARMJIT_RegCache.h  ARMJIT_RegisterCache.h  ARM_InstrInfo.cpp  ARM_InstrInfo.h  ARM_InstrTable.h  ARMv4.cpp  ARMv4.h  ARMv5.cpp  ARMv5.h  Args.h  Arguments.cpp  (+148 more)
src/ARMCachedInt/: ARMCachedInt.cpp  ARMCachedInt.h
src/ARMJIT_A64/: ARMJIT_ALU.cpp  ARMJIT_Branch.cpp  ARMJIT_Compiler.cpp  ARMJIT_Compiler.h  ARMJIT_Linkage.S  ARMJIT_Linkage.s  ARMJIT_LoadStore.cpp
src/ARMJIT_x64/: ARMJIT_ALU.cpp  ARMJIT_Branch.cpp  ARMJIT_Compiler.cpp  ARMJIT_Compiler.h  ARMJIT_GenOffsets.cpp  ARMJIT_Linkage.S  ARMJIT_Linkage.s  ARMJIT_LoadStore.cpp  ARMJIT_Offsets.h
src/DSP_HLE/: AACUcode.cpp  AACUcode.h  G711Ucode.cpp  G711Ucode.h  GraphicsUcode.cpp  GraphicsUcode.h  UcodeBase.cpp  UcodeBase.h  Ucode_Base.cpp  Ucode_Base.h
src/HLE_Retail/: IPC.cpp  IPC.h  Sound_Nitro.cpp  Sound_Nitro.h  Sound_Peach.cpp  Sound_Peach.h  Wifi.cpp  Wifi.h
src/NDSCart/: CartCommon.cpp  CartCommon.h  CartHomebrew.cpp  CartHomebrew.h  CartR4.cpp  CartR4.h  CartRetail.cpp  CartRetail.h  CartRetailBT.cpp  CartRetailBT.h  CartRetailIR.cpp  CartRetailIR.h  CartRetailNAND.cpp  CartRetailNAND.h  CartSD.cpp  CartSD.h  melonDLDI.h
src/OpenGL_shaders/: 2DCompositorFS.glsl  2DCompositorVS.glsl  2DLayerPreFS.glsl  2DLayerPreVS.glsl  2DSpriteFS.glsl  2DSpritePreFS.glsl  2DSpritePreVS.glsl  2DSpriteVS.glsl  3DClearBitmapFS.glsl  3DClearBitmapVS.glsl  3DClearFS.glsl  3DClearVS.glsl  3DFinalPassEdgeFS.glsl  3DFinalPassFogFS.glsl  3DFinalPassVS.glsl  3DRenderFS.glsl  3DRenderVS.glsl  CMakeLists.txt  CaptureDownscaleFS.glsl  CaptureDownscaleVS.glsl  CaptureFS.glsl  CaptureVS.glsl  CompositorFS.glsl  CompositorVS.glsl  FinalPassFS.glsl  FinalPassVS.glsl  LayerFS.glsl  LayerPreFS.glsl  LayerPreVS.glsl  LayerVS.glsl  SpriteFS.glsl  SpritePreFS.glsl  SpritePreVS.glsl  SpriteVS.glsl
src/RetroAchievements/: RAClient.cpp  RAClient.h  RAFunctions.h  RAMemory.cpp  cacert.c
src/android/: AndroidJNI.cpp  CMakeLists.txt  ConfigAndroid.cpp  InputAndroid.cpp  InputAndroid.h  LAN_PCap.cpp  MelonDS.cpp  MelonDS.h  OboeCallback.cpp  OboeCallback.h  PlatformAndroid.cpp  PlatformConfig.cpp  PlatformConfig.h  melon_fopen_android.cpp
src/blip-buf/: blip_buf.c  blip_buf.h  readme.txt
src/debug/: GdbArch.h  GdbCmds.cpp  GdbCmds.h  GdbProto.cpp  GdbProto.h  GdbStub.cpp  GdbStub.h  config.h  gdbarch.h  gdbcmds.c  gdbcmds.h  gdbproto.c  gdbproto.h  gdbstub.c  gdbstub.h  gdbstub_internal.h  hexutil.h  hv.cpp  hv.h  hypervisor.cpp  hypervisor.h  lxt_write.c  lxt_write.h  st.cpp  st.h  storage.cpp  storage.h
src/dolphin/: Arm64Emitter.cpp  Arm64Emitter.h  ArmCommon.h  Assert.h  BitSet.h  CPUDetect.h  CodeBlock.h  CommonFuncs.cpp  CommonFuncs.h  Compat.h  Intrinsics.h  Log.h  MathUtil.cpp  MathUtil.h  MemoryUtil.cpp  MemoryUtil.h  x64ABI.cpp  x64ABI.h  x64CPUDetect.cpp  x64Emitter.cpp  x64Emitter.h  x64Reg.h
src/duckstation/: duckstation_compat.h
src/fatfs/: diskio.c  ff.c  ff.h  ffconf.h  ffsystem.c
src/frontend/: FrontendUtil.h  ROMManager.cpp  ROMManager.h  ScreenLayout.cpp  ScreenLayout.h  SharedConfig.h  Util_Audio.cpp  Util_ROM.cpp  Util_Video.cpp  mic_blow.h
src/glad/: glad_glx.c  glad_glx.h
src/libui_sdl/: CMakeLists.txt  DlgAudioSettings.cpp  DlgAudioSettings.h  DlgEmuSettings.cpp  DlgEmuSettings.h  DlgFirmwareDumps.cpp  DlgFirmwareDumps.h  DlgInputConfig.cpp  DlgInputConfig.h  DlgPathSettings.cpp  DlgPathSettings.h  DlgSlot2Settings.cpp  DlgSlot2Settings.h  DlgVideoSettings.cpp  DlgVideoSettings.h  DlgWifiSettings.cpp  DlgWifiSettings.h  LAN.cpp  LAN.h  LAN_PCap.cpp  LAN_PCap.h  LAN_Socket.cpp  LAN_Socket.h  MelonAPI.cpp  MelonAPI.h  MelonCap.cpp  MelonCap.h  OSD.cpp  OSD.h  Platform.cpp  PlatformConfig.cpp  PlatformConfig.h  font.h  main.cpp  main_shaders.h
src/net/: CMakeLists.txt  LAN.cpp  LAN.h  LocalMP.cpp  LocalMP.h  MPInterface.cpp  MPInterface.h  Net.cpp  Net.h  NetDriver.h  Net_PCap.cpp  Net_PCap.h  Net_Slirp.cpp  Net_Slirp.h  Netplay.cpp  Netplay.h  PacketDispatcher.cpp  PacketDispatcher.h
src/pcap/: bluetooth.h  bpf.h  can_socketcan.h  funcattrs.h  nflog.h  pcap.h  sll.h  usb.h  vlan.h
src/rpc/: RPC.cpp  RPC.h  http.cpp  http.h
src/sha1/: sha1.c  sha1.h  sha1.hpp
src/slot2/: GBACart.cpp  GBACart.h  GBACartGBAMP.cpp  GBACartGBAMP.h  GBACartMemoryPak.cpp  GBACartMemoryPak.h  GBACartNone.cpp  GBACartNone.h  GBACartSuperCardCF.cpp  GBACartSuperCardCF.h  IDEDrive.cpp  IDEDrive.h
src/teakra/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
src/tiny-AES-c/: aes.c
src/unix/: ConfigUnix.cpp  melon_fopen_unix.cpp
src/win32/: ConfigWin32.cpp  melon_fopen_win32.cpp
src/wx/: EmuConfig.cpp  EmuConfig.h  InputConfig.cpp  InputConfig.h  Platform.cpp  main.cpp  main.h  scancode_wx2sdl.h
src/xbrz/: xbrz.cpp
test/: CMakeLists.txt
test/cases/: CMakeLists.txt
test/common/: CMakeLists.txt  Platform.cpp  TestCommon.cpp  TestCommon.h
(+1049 files in other folders)
