[package]
name = "retro-oasis-desktop"
version = "0.1.0"
description = "RetroOasis — multiplayer retro gaming launcher"
authors = ["RetroOasis Contributors"]
edition = "2021"

[lib]
name = "retro_oasis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"
